# TPpca

./: CMakeLists.txt  C_pca.cpp  C_pca.h  main.cpp
